# qterminal

./: .gitattributes  .gitignore  .vimrc  1230.patch  AUTHORS  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  INSTALL  LICENSE  README  README.md  TODO  animation.diff  build.sh  build_steamlink.sh  get_qtermwidget.sh  org.lxqt_project.Qterminal.metainfo.xml  qterminal.appdata.xml  qterminal.desktop  qterminal.metainfo.xml  qterminal.pro  qterminal.ts  qterminal_bookmarks_example.xml  qterminal_ca.ts  qterminal_cs.ts  qterminal_da.ts  qterminal_de.ts  qterminal_drop.desktop  qterminal_el.ts  qterminal_es.ts  qterminal_et.ts  qterminal_fr.ts  qterminal_hu.ts  qterminal_it.ts  qterminal_ja.ts  qterminal_lt.ts  qterminal_nl.ts  qterminal_pl.ts  (+7 more)
.ci/: build.sh
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
cmake/modules/: FindQTermWidget.cmake  FindQxt.cmake
qterminal/src/: config.h  mainwindow.cpp  mainwindow.h
qtermwidget_patches/: README  qtermwidget_pro.patch
src/: CMakeLists.txt  bookmarkswidget.cpp  bookmarkswidget.h  colorschemadialog.cpp  colorschemadialog.h  colorschemes.qrc  config.h  dbusaddressable.cpp  dbusaddressable.h  fontdialog.cpp  fontdialog.h  fonts.qrc  icons.qrc  instance-locker.cpp  instance-locker.h  main.cpp  mainwindow.cpp  mainwindow.h  org.lxqt.QTerminal.Process.xml  org.lxqt.QTerminal.Window.xml  palettedialog.cpp  palettedialog.h  properties.cpp  properties.h  propertiesdialog.cpp  propertiesdialog.h  qterminalapp.h  qterminalutils.cpp  qterminalutils.h  src.pro  tab-switcher.cpp  tabbar.cpp  tabbar.h  tabstyle.cpp  tabstyle.h  tabwidget.cpp  tabwidget.h  terminalconfig.cpp  terminalconfig.h  termwidget.cpp  (+4 more)
src/forms/: bookmarkswidget.ui  colorschemadialog.ui  palettedialog.ui  propertiesdialog.ui  qterminal.ui
src/macosx/: CMakeLists.txt
src/resources/: style.qss
src/translations/: Qterminal_ca@valencia.desktop.yaml  Qterminal_drop_fi.desktop.yaml  Qterminal_drop_hi.desktop.yaml  Qterminal_drop_hr.desktop.yaml  Qterminal_drop_lv.desktop.yaml  Qterminal_drop_pl.desktop.yaml  Qterminal_drop_sv.desktop.yaml  Qterminal_fi.desktop.yaml  Qterminal_hi.desktop.yaml  Qterminal_nl.desktop.yaml  Qterminal_sl.desktop.yaml  qterminal-drop.desktop.yaml  qterminal-drop_ar.desktop.yaml  qterminal-drop_bg.desktop.yaml  qterminal-drop_ca@valencia.desktop.yaml  qterminal-drop_cs.desktop.yaml  qterminal-drop_da.desktop.yaml  qterminal-drop_de.desktop.yaml  qterminal-drop_el.desktop.yaml  qterminal-drop_en_GB.desktop.yaml  qterminal-drop_et.desktop.yaml  qterminal-drop_eu.desktop.yaml  qterminal-drop_fr.desktop.yaml  qterminal-drop_he.desktop.yaml  qterminal-drop_hr.desktop.yaml  qterminal-drop_hu.desktop.yaml  qterminal-drop_it.desktop.yaml  qterminal-drop_ja.desktop.yaml  qterminal-drop_ka.desktop.yaml  qterminal-drop_kk.desktop.yaml  qterminal-drop_km.desktop.yaml  qterminal-drop_ko.desktop.yaml  qterminal-drop_lg.desktop.yaml  qterminal-drop_lt.desktop.yaml  qterminal-drop_nb.desktop.yaml  qterminal-drop_nds.desktop.yaml  qterminal-drop_nl.desktop.yaml  qterminal-drop_pa.desktop.yaml  qterminal-drop_pl.desktop.yaml  qterminal-drop_pt.desktop.yaml  (+111 more)
test/: CMakeLists.txt  qterminal_test.cpp  qterminal_test.h
